--- a/DeVore's matrix.ipynb
+++ b/DeVore's matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,75 +23,55 @@
     "        print('r should be less than p')\n",
     "        return None\n",
     "    else:\n",
-    "        matrix = np.zeros((p*p, p**(r+1)))\n",
+    "        matrix = np.zeros((p*p, p**(r+1)),dtype='int')\n",
     "        for i in range(p**(r+1)):\n",
     "            for j in range(p):\n",
     "                val = poly(i,j,r,p)\n",
     "                row_num = val + j*p\n",
-    "                matrix[row_num][i] = 1/p\n",
+    "                matrix[row_num][i] = 1\n",
     "        return matrix\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.2, 0. , 0. , ..., 0. , 0. , 0. ],\n",
-       "       [0. , 0.2, 0. , ..., 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0.2, ..., 0.2, 0. , 0. ],\n",
+       "array([[1, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 1, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 1, ..., 0, 0, 0],\n",
        "       ...,\n",
-       "       [0. , 0. , 0.2, ..., 0.2, 0. , 0. ],\n",
-       "       [0. , 0. , 0. , ..., 0. , 0.2, 0. ],\n",
-       "       [0. , 0. , 0. , ..., 0. , 0. , 0.2]])"
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 1, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 1, 0]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat = devore(5,4)\n",
+    "mat = devore(13,5)\n",
     "mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "(169, 4826809)"
       ]
      },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "poly(9,3,4,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(25, 3125)"
-      ]
-     },
-     "execution_count": 50,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
