--- a/DeVore's matrix.ipynb
+++ b/DeVore's matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,61 +23,166 @@
     "        print('r should be less than p')\n",
     "        return None\n",
     "    else:\n",
-    "        matrix = np.zeros((p*p, p**(r+1)),dtype='int')\n",
+    "        matrix = np.zeros((p*p, p**(r+1)),dtype='int')        \n",
     "        for i in range(p**(r+1)):\n",
     "            for j in range(p):\n",
     "                val = poly(i,j,r,p)\n",
     "                row_num = val + j*p\n",
     "                matrix[row_num][i] = 1\n",
-    "        return matrix\n",
-    "    "
+    "        return matrix\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 1, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 1, ..., 0, 0, 0],\n",
+       "array([[0.22941573, 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.22941573, 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.22941573, ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
        "       ...,\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 1, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 1, 0]])"
+       "       [0.        , 0.        , 0.        , ..., 0.22941573, 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.22941573,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.22941573]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat = devore(13,5)\n",
+    "p = 19\n",
+    "r = 4\n",
+    "mat = devore(p,r)\n",
+    "mat = mat/sqrt(p)\n",
     "mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(169, 4826809)"
+       "(361, 2476099)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0054536966685315 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import *\n",
+    "N = mat.shape[1]\n",
+    "s = 3\n",
+    "x=np.zeros(N)\n",
+    "S1= np.random.permutation(N)\n",
+    "S1 = S1[:s]\n",
+    "x[S1] = np.random.rand(s)\n",
+    "x = x/np.linalg.norm(x)\n",
+    "#compute y\n",
+    "y =np.matmul(mat,x)\n",
+    "print (np.linalg.norm(y), np.linalg.norm(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0432781531878385"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#OMP\n",
+    "S = []\n",
+    "vec = np.zeros(N)\n",
+    "n_iter = 500\n",
+    "for i in range(n_iter):\n",
+    "    y_n = np.matmul(mat, vec)\n",
+    "    j = np.argmax([abs(ele) for ele in np.matmul(mat.transpose(), (y - y_n))])\n",
+    "    S.append(j)\n",
+    "    x_n = np.matmul(np.linalg.pinv(mat[:,S]),y)\n",
+    "    if np.linalg.norm(x_n-vec[S])<pow(10,-3):\n",
+    "        break\n",
+    "    vec = np.zeros(N)\n",
+    "    vec[S] = x_n\n",
+    "\n",
+    "np.linalg.norm(x-vec) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
    ]
   },
   {
