--- a/DeVore's_matrix.ipynb
+++ b/DeVore's_matrix.ipynb
@@ -210,8 +210,9 @@
     "    y_n = mat@vec\n",
     "    x_n = vec + mat.transpose()@(y-y_n)\n",
     "    vec = np.zeros(N)\n",
-    "    temp = sorted(x_n, key = abs)[-s:]\n",
-    "    vec[[np.argwhere(x_n == temp[i])[0][0] for i in range(s)]] = temp\n",
+    "    indx = np.argsort(np.abs(x_n))[-s:]\n",
+    "    for idx in indx:\n",
+    "        vec[idx] = x_n[idx]\n",
     "\n",
     "  \n",
     "np.linalg.norm(x-vec,2)"
