--- a/PV_expander.ipynb
+++ b/PV_expander.ipynb
@@ -230,8 +230,9 @@
     "    y_n = mat.dot(vec/np.sqrt(q))\n",
     "    x_n = vec + mat.getH().dot((y-y_n)/np.sqrt(q))\n",
     "    vec = np.zeros(N)\n",
-    "    temp = sorted(x_n, key = abs)[-s:]\n",
-    "    vec[[np.argwhere(x_n == temp[i])[0][0] for i in range(s)]] = temp\n",
+    "    indx = np.argsort(np.abs(x_n))[-s:]\n",
+    "    for idx in indx:\n",
+    "        vec[idx] = x_n[idx]\n",
     "  \n",
     "np.linalg.norm(x-vec)"
    ]
